--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #989787;
+  color: white;
+  display: flex;
+  justify-content: center;
 }
+.restart {
+  width: 65px;
+  height: 20px;
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+  background-color: red;
+  border: none;
+}
+.game-title {
+  color: darkblue;
+  text-shadow: #FC0 1px 0 10px;
+  text-align: left;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.inputdev {
+  display: flex;
+   border: black;
+}
+.done {
+  display: flex;
+  font-weight: bold;
+  font-size: 15px;
+  margin-left: 10px;
+  color: white;
+  background-color: red;
+}
+.selected {
+  display: flex;
+  border: black solid;
+  width: 25px;
+  height: 20px;
+  color: black;
+  font-weight: bold;
+  font-size: 15px;
+}
+.board {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+}
+.yellowsquares {
+  background-color: #D9F470;
+  font-weight: bold;
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+  color: black;
+}
+.info-wrapper {
+  font-weight: bold;
+  font-size: 15px;
+  color: black;
+}
+.info-parms {
+  color: white;
+  border: solid;
+}
+.score {
+  display: flex;
+  justify-content: flex-end;
+  font-weight: bold;
+}
+.msgValid {
+  color: green;
+  font-weight: bold;
+  background-color: white;
+}
+.msgErr {
+  color: red;
+  font-weight: bold;
+  background-color: white;
+}
+.alphabet {
+  color: black;
+  font-weight: bold;
+  background-color: #EDF5D1;
+}
+.instructions {
+  all: unset;
+  display: block;
+  color: blue;
+  font-weight: bold;
+  background-color: white;
+}
+.instructionsNum {
+  color: white;
+  font-weight: bold;
 }
